<resources>
    <string name="app_name">MercadoEsclavo</string>
    <string name="title_ActivityMain">Mercado Esclavo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cantidad">Cantidad: </string>
    <string name="disponible">Disponible:</string>
    <string name="tipoDeCompra">Tipo de compra: </string>
    <string name="condicion">Condicion: </string>
    <string name="ubicacionDelVendedor">Ubicacion del vendedor: </string>
    <string name="garantia">Garantia: </string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Nombre">Nombre</string>
    <string name="Apellido">Apellido</string>
    <string name="Edad">Edad</string>
    <string name="Telefono">Telefono</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="sobre_nosotros">Sobre nosotros</string>
    <string name="favoritos">Favoritos</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="descripcion">Descripcion </string>
    <string name="facebook_app_id">445065646425419</string>
    <string name="fb_login_protocol_scheme">fb445065646425419</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="title_activity_maps">Google Maps</string>
    <string name="Buscar">Buscar</string>
    <string name="Comentarios">Comentarios</string>
    <string name="titulo_categories">¿Qué buscás hoy?</string>
    <string name="home">Home</string>

</resources>
