<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigationViewHome"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />

    <item
        android:id="@+id/navigationViewMenuIniciarSesion"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/iniciar_sesion" />

    <item
        android:id="@+id/navigationViewMenuPerfil"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/mi_perfil" />

    <item
        android:id="@+id/navigationViewMenuFavoritos"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/favoritos" />

    <item
        android:id="@+id/navigationViewMenuCerrarSesion"
        android:icon="@drawable/ic_close_black_24dp"
        android:title="@string/cerrar_sesion" />

    <item
        android:id="@+id/navigationViewAboutUs"
        android:icon="@drawable/ic_help_black_24dp"
        android:title="@string/sobre_nosotros" />


</menu>