<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".view.DetalleProductFragment">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"></LinearLayout>


    <TextView
        android:id="@+id/textViewTitleDetalleProductFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="TITULO PRODUCTO"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewDetalleProductFragment"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"

        app:cardCornerRadius="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitleDetalleProductFragment">

        <ImageView
            android:id="@+id/imageViewCardViewDetalleProductFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textViewPriceDetalleProductFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toRightOf="@id/cardViewDetalleProductFragment"
        app:layout_constraintTop_toBottomOf="@id/textViewTitleDetalleProductFragment" />

    <TextView
        android:id="@+id/textViewTituloCantidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cantidad"
        app:layout_constraintLeft_toRightOf="@id/cardViewDetalleProductFragment"
        app:layout_constraintTop_toBottomOf="@id/textViewPriceDetalleProductFragment" />

    <TextView
        android:id="@+id/textViewCantidadDetalleProductFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/textViewTituloCantidad"
        app:layout_constraintTop_toBottomOf="@id/textViewPriceDetalleProductFragment" />

    <TextView
        android:id="@+id/textViewTituloDisponible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disponible"
        app:layout_constraintLeft_toRightOf="@id/cardViewDetalleProductFragment"
        app:layout_constraintTop_toBottomOf="@id/textViewTituloCantidad" />

    <TextView
        android:id="@+id/textViewDisponibleDetalleProductFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/textViewTituloDisponible"
        app:layout_constraintTop_toBottomOf="@id/textViewCantidadDetalleProductFragment" />

    <TextView
        android:id="@+id/textViewTituloTipoDeCompra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipoDeCompra"
        app:layout_constraintLeft_toRightOf="@id/cardViewDetalleProductFragment"
        app:layout_constraintTop_toBottomOf="@id/textViewTituloDisponible" />

    <TextView
        android:id="@+id/textViewTipoDeCompraDetalleProductFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/textViewTituloTipoDeCompra"
        app:layout_constraintTop_toBottomOf="@id/textViewDisponibleDetalleProductFragment" />

    <TextView
        android:id="@+id/textViewTituloCondicion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/condicion"
        app:layout_constraintLeft_toRightOf="@id/cardViewDetalleProductFragment"
        app:layout_constraintTop_toBottomOf="@id/textViewTituloTipoDeCompra" />

    <TextView
        android:id="@+id/textViewCondicionDetalleProductFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/textViewTituloCondicion"
        app:layout_constraintTop_toBottomOf="@id/textViewTipoDeCompraDetalleProductFragment" />

    <TextView
        android:id="@+id/textViewTituloGarantia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/garantia"
        app:layout_constraintLeft_toRightOf="@id/cardViewDetalleProductFragment"
        app:layout_constraintTop_toBottomOf="@id/textViewCondicionDetalleProductFragment" />

    <TextView
        android:id="@+id/textViewTituloUbicacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/ubicacionDelVendedor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardViewDetalleProductFragment" />

    <TextView
        android:id="@+id/textViewUbicacionDetalleProductFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toRightOf="@id/textViewTituloUbicacion"
        app:layout_constraintTop_toBottomOf="@id/cardViewDetalleProductFragment" />


</androidx.constraintlayout.widget.ConstraintLayout>