<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light"
    tools:context=".view.fragment.DetalleProductFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:id="@+id/coordinator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/ImagenDetalleBusquedaFragment"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:background="@color/icons"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floatingButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/accent"
                    android:src="@drawable/ic_favorite_border_white_24dp"
                    app:layout_anchor="@id/ImagenDetalleBusquedaFragment"
                    app:layout_anchorGravity="bottom | end" />

            </androidx.coordinatorlayout.widget.CoordinatorLayout>


            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewDetalleBusquedaFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/icons"
                app:cardElevation="10dp"
                app:layout_constraintTop_toBottomOf="@id/coordinator">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewTitleDetalleBusquedaFragment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="TITULO PRODUCTO"
                        android:textColor="@color/primary_text"
                        android:textSize="20dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imagenSignoPesos"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/ic_attach_money_black_24dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textViewTitleDetalleBusquedaFragment" />

                    <TextView
                        android:id="@+id/textViewPriceDetalleBusquedaFragment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:foregroundGravity="center_vertical"
                        android:paddingBottom="10dp"
                        android:text="200"
                        android:textColor="@color/primary_text"
                        android:textSize="25dp"
                        android:textStyle="bold"
                        app:layout_constraintLeft_toRightOf="@id/imagenSignoPesos"
                        app:layout_constraintTop_toBottomOf="@id/textViewTitleDetalleBusquedaFragment" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2DetalleBusquedaFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/icons"
                app:cardElevation="10dp"
                app:layout_constraintTop_toBottomOf="@id/cardViewDetalleBusquedaFragment">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <TextView
                        android:id="@+id/textViewTituloCantidad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/cantidad"
                        android:textColor="@color/primary_text"
                        android:textStyle="bold"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textViewCantidadDetalleBusquedaFragment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/secondary_text"
                        app:layout_constraintLeft_toRightOf="@id/textViewTituloCantidad"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textViewTituloDisponible"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/disponible"
                        android:textColor="@color/primary_text"
                        android:textStyle="bold"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textViewTituloCantidad" />

                    <TextView
                        android:id="@+id/textViewDisponibleDetalleBusquedaFragment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:textColor="@color/secondary_text"
                        app:layout_constraintLeft_toRightOf="@id/textViewTituloDisponible"
                        app:layout_constraintTop_toBottomOf="@id/textViewCantidadDetalleBusquedaFragment" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/cardView3DetalleBusquedaFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/icons"
                app:cardElevation="10dp"
                app:layout_constraintTop_toBottomOf="@id/cardView2DetalleBusquedaFragment">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewTituloTipoDeCompra"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/tipoDeCompra"
                        android:textColor="@color/primary_text"
                        android:textStyle="bold"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textViewTipoDeCompraDetalleBusquedaFragment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/secondary_text"
                        app:layout_constraintLeft_toRightOf="@id/textViewTituloTipoDeCompra"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textViewTituloCondicion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/condicion"
                        android:textColor="@color/primary_text"
                        android:textStyle="bold"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textViewTituloTipoDeCompra" />

                    <TextView
                        android:id="@+id/textViewCondicionDetalleBusquedaFragment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:textColor="@color/secondary_text"
                        app:layout_constraintLeft_toRightOf="@id/textViewTituloCondicion"
                        app:layout_constraintTop_toBottomOf="@id/textViewTipoDeCompraDetalleBusquedaFragment" />

                    <TextView
                        android:id="@+id/textViewGarantiaDetalleBusquedaFragment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/garantia"
                        android:textColor="@color/primary_text"
                        android:textStyle="bold"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textViewTituloCondicion" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/cardView4DetalleBusquedaFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/icons"
                app:cardElevation="10dp"
                app:layout_constraintTop_toBottomOf="@id/cardView3DetalleBusquedaFragment">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imagenUbicacion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:paddingTop="10dp"
                        android:paddingRight="10dp"
                        android:src="@drawable/ic_place_black_24dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textViewTituloUbicacion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/ubicacionDelVendedor"
                        android:textColor="@color/primary_text"
                        android:textStyle="bold"
                        app:layout_constraintLeft_toRightOf="@id/imagenUbicacion"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textViewUbicacionDetalleBusquedaFragment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:paddingBottom="10dp"
                        android:textColor="@color/secondary_text"
                        app:layout_constraintLeft_toRightOf="@id/imagenUbicacion"
                        app:layout_constraintTop_toBottomOf="@id/textViewTituloUbicacion" />

                    <LinearLayout
                        android:id="@+id/contenedorDeMapa"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textViewUbicacionDetalleBusquedaFragment"
                        android:orientation="vertical" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView5DetalleBusquedaFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/icons"
                app:cardElevation="10dp"
                app:layout_constraintTop_toBottomOf="@id/cardView4DetalleBusquedaFragment">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewTituloDescripcion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/descripcion"
                        android:textColor="@color/primary_text"
                        android:textStyle="bold"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textViewDescripcionDetalleBusquedaFragment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:paddingBottom="10dp"
                        android:textColor="@color/secondary_text"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textViewTituloDescripcion" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <include layout="@layout/progress_bar"></include>
</androidx.constraintlayout.widget.ConstraintLayout>